fixed header margin on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -520,8 +520,7 @@ h4,
 }
 @media screen and (max-width: 992px) {
   #header {
-    height: 90px;
-    margin-bottom: 16px;
+    height: 106px;
   }
   #header-mob__btn {
     display: block;
@@ -579,7 +578,7 @@ h4,
 }
 @media screen and (max-width: 580px) {
   #header {
-    height: 79px;
+    height: 95px;
   }
   .logo {
     width: 299px;
