--- a/less/modules/header.less
+++ b/less/modules/header.less
@@ -147,8 +147,8 @@
 
 @media  screen and (max-width: 992px) {
   #header {
-    height: 90px;
-    margin-bottom: 16px;
+    height: 106px;
+    //padding-bottom: 16px;
   }
   #header-mob__btn{
     display: block;
@@ -197,7 +197,7 @@
 
 @media  screen and (max-width: 580px) {
   #header {
-    height: 79px;
+    height: 95px;
   }
   .logo{
     .size(299px, 42px);
